--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="form-group" style="margin-left:18%;">
                                 <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
-                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file" id="pictur_btn" class="hide" />
+                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file_img" id="pictur_btn" class="hide" />
                                 </label>
                             </div>
                         </div>
