--- a/application/admin/view/box_cate/cate_list.html
+++ b/application/admin/view/box_cate/cate_list.html
@@ -8,7 +8,7 @@
                 <div class="ibox-title">
                     <h5>{$meta_title}</h5>
                     <div class="pull-right" style="margin-top:-8px;">
-                            <a class="btn btn-info" href="{:url('add_cate')}"><i class="fa fa-plus"></i> 添加类别</a>
+                            <a class="btn btn-info" href="{:url('add_cate')}"><i class="fa fa-plus"></i> 添加场景</a>
                     </div>
                 </div>
                 <div class="ibox-content">
