--- a/application/admin/view/sharing/edit.html
+++ b/application/admin/view/sharing/edit.html
@@ -21,7 +21,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea name="" id="" cols="30" rows="10" style="width: 100%;">{$info.content}</textarea>
+                                <textarea name="content" id="" cols="30" rows="10" style="width: 100%;">{$info.content}</textarea>
                             </div>
                         </div>
                         {if condition="$info.type eq 0"}
