--- a/application/card/view/index/gif.html
+++ b/application/card/view/index/gif.html
@@ -576,7 +576,7 @@ body,html{
         <!-- 文字四 -->
         <div class="wenzisibox xiaobox">
             <image class="wenzisi" src="/image/wenzisi.png" />
-            <span class="wenzispan">{$info.content}555555555555555555555555555555555</span>
+            <span class="wenzispan">{$info.content}</span>
         </div> 
     </div>
 
