--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -62,7 +62,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">祝福语颜色</label>
                             <div class="col-sm-9">
-                                <input type="text" name="color" value="{$info.color}" class="form-control">
+                                <input type="color" name="color" value="{$info.color}" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
