--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -1009,7 +1009,7 @@ body,html{
         <!-- 文字四 -->
         <div class="wenzisibox xiaobox">
             <image class="wenzisi" src="/image/wenzisi.png" />
-            <span class="wenzispan">{$info.content}</span>
+            <span class="wenzispan" style="{$style}">{$info.content}</span>
         </div>
         <!-- 文字五 -->
         <!-- <div class="wenziwubox xiaobox">
