--- a/application/admin/view/box_cate/add.html
+++ b/application/admin/view/box_cate/add.html
@@ -101,6 +101,19 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">用户的图</label>
+                            <div class="col-sm-9">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="user_img_type" checked="true" id="show1" >
+                                    <label for="show1">方的</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="user_img_type" id="show2"  >
+                                    <label for="show2">圆的</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">状态</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
