--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -60,6 +60,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">排序</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="sort" value="{$info.sort}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">祝福语颜色</label>
                             <div class="col-sm-9">
                                 <input type="color" name="color" value="{$info.color}" class="form-control">
@@ -97,9 +103,16 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">排序</label>
+                            <label class="col-sm-2 control-label">用户的图</label>
                             <div class="col-sm-9">
-                                <input type="text" name="sort" value="{$info.sort}" class="form-control">
+                                <div class="radio radio-success radio-inline">
+                                    <input type="radio" value="1" name="user_img_type" checked="true" id="show1"  {if condition="$info.user_img_type eq 1"}checked="true"{/if}>
+                                    <label for="show1">方的</label>
+                                </div>
+                                <div class="radio radio-danger radio-inline">
+                                    <input type="radio" value="0" name="user_img_type" id="show2"  {if condition="$info.user_img_type eq 0"}checked="true"{/if}>
+                                    <label for="show2">圆的</label>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
