--- a/application/admin/view/goods/goods_brand.html
+++ b/application/admin/view/goods/goods_brand.html
@@ -29,7 +29,7 @@
                                 <th>ID</th>
                                 <th>名称<span data-id="name" onclick="order(this)">↑↑</span><span data-id="name desc" onclick="order(this)">↓↓</span></th>
                                 <th>图片</th>
-                                <th>排序</th>
+                                <th>排序<span data-id="sort" onclick="order(this)">↑↑</span><span data-id="sort desc" onclick="order(this)">↓↓</span></th>
                                 <th>状态<span data-id="status desc" onclick="order(this)">↑↑</span><span data-id="status" onclick="order(this)">↓↓</span></th>
                                 <th>添加时间<span  data-id="addtime" onclick="order(this)">↑↑</span><span data-id="addtime desc" onclick="order(this)">↓↓</span></th>
                                 <th>操作</th>
