--- a/application/admin/view/box_cate/add.html
+++ b/application/admin/view/box_cate/add.html
@@ -21,7 +21,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label ">选择上级分类</label>
                             <div class="col-sm-9">
-                                <select name="pid"  class="form-control">
+                                <select name="pid"  class="form-control" onchange="is_top()">
                                     <option value="0">顶级分类</option>
                                     {volist name="cate_list" id="vo"}
                                         <option value="{$vo.id}" {if condition="$vo.id eq $pid"}selected{/if} >{$vo.name}</option>
@@ -30,28 +30,28 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">图片</label>
+                            <label class="col-sm-2 control-label tubiao">图片</label>
                             <div class="img-preview" style="display:{$info.picture? 'block':'none'};margin-left:-20%"> 
                                 <img src="{$info.picture|default=''}" id='img_show' style=" max-width: 300px; max-height: 300px">
                             </div>
                             <div class="form-group" style="margin-left:18%;margin-top: 20px;">
-                                <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传新图像
+                                <label title="上传图片" for="pictur_btn" class="btn btn-primary" id="pictur">上传图像
                                     <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file_img" id="pictur_btn" class="hide" />
                                 </label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">动图</label>
+                            <label class="col-sm-2 control-label tubiao_ed">GIF动图</label>
                             <div class="img-preview2" style="display:{$info.gif? 'block':'none'};margin-left:-20%">
                                 <img src="{$info.gif|default=''}" id='img_show2' style=" max-width: 300px; max-height: 300px">
                             </div>
                             <div class="form-group" style="margin-left:18%;">
-                                <label title="上传动图" for="image_file" class="btn btn-primary" id="pictur">上传动图
+                                <label title="上传动图" for="image_file" class="btn btn-primary" id="pictur2">上传图像
                                 </label>
-                                <label title="重新计算"  class="btn btn-primary" onclick="cxjs()">重新计算</label>
+                                <label title="重新计算"  class="btn btn-primary jisuanan" onclick="cxjs()" >重新计算</label>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group top">
                             <label class="col-sm-2 control-label">GIF时长</label>
                             <div class="col-sm-9">
                                 <input type="text" name="duration" value="" class="form-control">
@@ -63,13 +63,13 @@
                                 <input type="text" name="sort" value="" class="form-control">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group top">
                             <label class="col-sm-2 control-label">祝福语颜色</label>
                             <div class="col-sm-9">
                                 <input type="color" name="color" value="" class="form-control">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group top">
                             <label class="col-sm-2 control-label ">祝福语大小</label>
                             <div class="col-sm-9">
                                 <select name="font_size"  class="form-control">
@@ -87,7 +87,7 @@
                                 </select> 
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group top">
                             <label class="col-sm-2 control-label">是否加粗</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
@@ -100,7 +100,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group top">
                             <label class="col-sm-2 control-label">用户的图</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
@@ -177,32 +177,6 @@
                 }
             }
         });
-        // $('#pictur_btn2').change(function() {
-        //     if (!this.value) {
-        //         $("#img_show2").attr('src', '');
-        //         filedata = '';
-        //         pictur = '';
-        //         return false;
-        //     }
-        //     var file = this.files[0];
-        //     var ext = file.name.substr(-3, 3);
-        //     if (ext != 'jpg' && ext != 'gif' && ext != 'png' && ext != 'jpeg') {
-        //         layer.msg("文件格式不正确", { icon: 5 });
-        //         window.location.reload();
-        //         return false;
-        //     }
-        //     if (file.size > 10240000) {
-        //         layer.msg("该文件太大无法上传", { icon: 5 });
-        //     } else {
-        //         var reader = new FileReader();
-        //         //将文件以Data URL形式读入页面  
-        //         reader.readAsDataURL(file);
-        //         reader.onload = function(e) {
-        //             $('.img-preview2').show();
-        //             $("#img_show2").attr('src', this.result);
-        //         }
-        //     }
-        // });
     });
 
     //文件上传
@@ -219,6 +193,18 @@
                         layer.msg(res.msg);
                     }
                 },'json')
+            }else{
+                alert(data.msg);
+            }
+        });
+    }
+    //文件上传
+    function upload_file2(){
+        $("#ajaxForm2").ajaxSubmit(function (data) {
+            if(data.status == 1){
+                $('.img-preview3').show();
+                $('input[name="picture_ed"]').val(data.data);
+                $('#img_show3').attr('src',data.data);
             }else{
                 alert(data.msg);
             }
@@ -241,5 +227,22 @@
         },'json')
         
     }
+
+    is_top();
+    //判断是不是顶级分类
+    function is_top(){
+        var pid = $('select[name="pid"]').val();
+        if(pid==0){
+            $('.top').css('display','none');
+            $('.tubiao').html('未选中的图标');
+            $('.tubiao_ed').html('选中的图标');
+            $('.jisuanan').css('display','none');
+        }else{
+            $('.top').css('display','block');
+            $('.tubiao').html('图片');
+            $('.tubiao_ed').html('GIF动图');
+            $('.jisuanan').css('display','inline-block');
+        }
+    } 
 </script>
 {/block}
