--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -13,6 +13,7 @@
                     <form method="post" class="form-horizontal" id="ajaxForm2" action="{:url('box_cate/cate_post')}" enctype="multipart/form-data">
                         <input type="hidden" name="id" value="{$info.id}">
                         <input type="hidden" name="gif" value="{$info.gif}">
+                        <input type="hidden" name="tail_img" value="{$info.tail_img}">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">名称</label>
                             <div class="col-sm-9">
@@ -57,6 +58,16 @@
                             <div class="col-sm-9" style="display: inline-block;">
                                 <input type="text" name="duration" value="{$info.duration}" class="form-control" style="width:30%;display: inline-block"><span style="padding-left:10px">秒</span> 
                                 <label title="重新计算"  class="btn btn-primary" onclick="cxjs()" style="margin-left:40px">重新计算GIF时长</label>
+                            </div>
+                        </div>
+                        <div class="form-group top">
+                            <label class="col-sm-2 control-label">停留页图片</label>
+                            <div class="img-preview3" style="display:{$info.tail_img ? 'block':'none'};margin-left:-20%">
+                                <img src="{$info.tail_img |default=''}" id='img_show3' style=" max-width: 300px; max-height: 300px">
+                            </div>
+                            <div class="form-group" style="margin-left:18%;">
+                                <label title="上传动图" for="image_file2" class="btn btn-primary" id="pictur3">上传停留页图片
+                                </label>
                             </div>
                         </div>
                         <div class="form-group">
@@ -139,6 +150,10 @@
                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
                         <input type="file" id="image_file" value="" accept="image/*" name="file" onchange="upload_file()" style="display: none">
                     </form>
+                    <!-- 图片上传 -->
+                    <form method="post" class="form-horizontal" id="ajaxForm3" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="image_file2" value="" accept="image/*" name="file" onchange="upload_file2()" style="display: none">
+                    </form>
                 </div>
             </div>
         </div>
@@ -194,6 +209,18 @@
                         layer.msg(res.msg);
                     }
                 },'json')
+            }else{
+                alert(data.msg);
+            }
+        });
+    }
+    //文件上传
+    function upload_file2(){
+        $("#ajaxForm3").ajaxSubmit(function (data) {
+            if(data.status == 1){
+                $('.img-preview3').show();
+                $('input[name="tail_img"]').val(data.data);
+                $('#img_show3').attr('src',data.data);
             }else{
                 alert(data.msg);
             }
